--- a/styles.css
+++ b/styles.css
@@ -280,3 +280,63 @@ footer p {
   text-align: center;
 }
 
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.checkout-button {
+  padding: 0.5rem 1rem;
+  background: #f03562;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 2rem;
+}
+
+.checkout-button:hover {
+  background: #2d9ce1;
+}
+
+@media (max-width: 768px) {
+  .filter {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .veg-filter {
+    margin-top: 1rem;
+  }
+
+  .restaurant-details {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .restaurant-details img {
+    width: 100%;
+    margin-right: 0;
+    margin-bottom: 1rem;
+  }
+
+  .menu-item {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .menu-item img {
+    width: 100%;
+    margin-right: 0;
+    margin-bottom: 1rem;
+  }
+}
