--- a/styles/userOnboarding.css
+++ b/styles/userOnboarding.css
@@ -12,7 +12,8 @@ body, html {
   margin: 0;
   font-family: 'Jost', sans-serif;
   background: #fcf6ea;
-  overflow: hidden; /* Prevent scrolling */
+  overflow: hidden; 
+
 }
 
 header {
@@ -68,7 +69,7 @@ header nav ul li a:hover {
   border-radius: 10px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   width: 100%;
-  max-width: 500px;
+  max-width: 600px;
   text-align: center;
   animation: fadeIn 0.5s;
 }
@@ -165,6 +166,32 @@ button:hover {
     opacity: 1;
     transform: translateX(0);
   }
+}
+
+.popup {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  justify-content: center;
+  align-items: center;
+  animation: fadeIn 0.5s;
+}
+
+.popup-content {
+  background: #fff;
+  padding: 2rem;
+  border-radius: 10px;
+  text-align: center;
+  width: 80%;
+  max-width: 400px;
+}
+
+.blur {
+  filter: blur(5px);
 }
 
 ::-webkit-scrollbar {
