--- a/styles/userOnboarding.css
+++ b/styles/userOnboarding.css
@@ -15,7 +15,6 @@ body, html {
   overflow: hidden; 
 
 }
-
 header {
   display: flex;
   justify-content: space-between;
@@ -69,7 +68,7 @@ header nav ul li a:hover {
   border-radius: 10px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   width: 100%;
-  max-width: 600px;
+  max-width: 600px; /* Increased width */
   text-align: center;
   animation: fadeIn 0.5s;
 }
